--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
+    "bluebird": "^3.5.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.28.0",
